erDiagram
  USERS ||--o{ ORDERS : passe
  MENUS ||--o{ ORDERS : concerne
  MENUS ||--o{ MENU_DISHES : compose
  DISHES ||--o{ MENU_DISHES : associe
  DISHES ||--o{ DISH_ALLERGENS : contient
  ALLERGENS ||--o{ DISH_ALLERGENS : definit
  ORDERS ||--o{ ORDER_STATUS_HISTORY : historise
  ORDERS ||--o| REVIEWS : genere
  USERS ||--o{ REVIEWS : ecrit
